--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,10 +14,11 @@ android {
     buildTypes {
         release {
             minifyEnabled false
-
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
+
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -25,3 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.0'
     compile 'com.github.satyan:sugar:1.4'
 }
+
+
